[project]
name = "aula08-bootcamp"
version = "0.1.0"
description = "Exercicios 8 do módulo 6-10"
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pandera (>=0.23.1,<0.24.0)"
]

[tool.poetry]
packages = [{include = "aula08_bootcamp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
